--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -57,7 +57,25 @@ p {
 .top-header {
 	padding-top: 0px;
 	color: #f8f8f8;
-	background: #f8f8f8 url(../images/bg2.png) no-repeat center fixed;
+  /* background: #34495E; */ /*url(../images/bg2.png) no-repeat center fixed; */
+   	
+  /* IE10 Consumer Preview */ 
+  background-image: -ms-linear-gradient(top, #34495E 0%, #3ABAB6 100%);
+  
+  /* Mozilla Firefox */ 
+  background-image: -moz-linear-gradient(top, #34495E 0%, #3ABAB6 100%);
+  
+  /* Opera */ 
+  background-image: -o-linear-gradient(top, #34495E 0%, #3ABAB6 100%);
+  
+  /* Webkit (Safari/Chrome 10) */ 
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #34495E), color-stop(1, #3ABAB6));
+  
+/* Webkit (Chrome 11+) */ 
+  background-image: -webkit-linear-gradient(top, #34495E 0%, #3ABAB6 100%);
+  
+  /* W3C Markup, IE10 Release Preview */ 
+  background-image: linear-gradient(to bottom, #34495E 0%, #3ABAB6 100%);
 	background-size: cover;
 	height: 100%;
 	width: 100%
@@ -65,9 +83,9 @@ p {
 
 .top-message {
 	position: relative;
-	padding-top: 22%;
+	/**padding-top: 22%; **/
 	padding-bottom: 0%;
-	padding-right:50px;
+	/* padding-right:50px; */
 }
 
 .top-message > h1 {
@@ -440,8 +458,30 @@ i.service-icon {
 
 .newsletter {
 	color: #ffffff;
-	background: #34495e;
+   	
+  /* IE10 Consumer Preview */
+  background-image: -ms-linear-gradient(top, #34495E 0%, #3ABAB6 100%);
+
+  /* Mozilla Firefox */
+  background-image: -moz-linear-gradient(top, #34495E 0%, #3ABAB6 100%);
+
+  /* Opera */
+  background-image: -o-linear-gradient(top, #34495E 0%, #3ABAB6 100%);
+
+  /* Webkit (Safari/Chrome 10) */
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #34495E), color-stop(1, #3ABAB6));
+
+  /* Webkit (Chrome 11+) */
+  background-image: -webkit-linear-gradient(top, #34495E 0%, #3ABAB6 100%);
+
+  /* W3C Markup, IE10 Release Preview */
+  background-image: linear-gradient(to bottom, #34495E 0%, #3ABAB6 100%);
 	padding: 40px 0 55px;
+}
+
+.team {
+  color: black;
+  background: #ffffff;
 }
 
 .newsletter input {
