re-arranges landing page elements; changes CTAs, background color and other minor stuff

--- a/app/views/how.scala.html
+++ b/app/views/how.scala.html
@@ -15,7 +15,7 @@
                 <div class="col-lg-offset-2 col-lg-8 col-md-8 col-md-offset-2">
                     <hr>
                     <br>
-                    <h2 class="bio">Integrate our SDK in your Android or iOS application in less than 5 minutes</h2>
+                    <h2 class="bio">Integrate our SDK in less than 5 minutes</h2>
                     <br>
                     <div class="text-center">
                       <canvas id="anim_target" class="anim_target" width="800" height="450">
@@ -30,11 +30,11 @@
             <br>
     </div>
 
-    <div class="top" style="margin-bottom:-50px">
+    <div style="margin-bottom:-50px">
         <div class="container">
-            <h2 class="text-center">Would you like to know more?</h2>
+            <h2 class="text-center">Want to know more? Schedule a live demo!</h2>
             <br>
-            <div class="row">
+            <div class="row" style="margin-botton: 1.5em;">
             	@views.html.form.render("contactHow", "userEmail", "saveUserEmail")
           </div>
       </div>
