--- a/app/views/contact.scala.html
+++ b/app/views/contact.scala.html
@@ -9,7 +9,7 @@
     @views.html.top.render()
 
     <div class="container text-center">
-        <h1>We love users. Write us and we will get back to you.</h1>
+        <h1>Here's where you can find us. Feel free to reach out to us!</h1>
         <br><br>
         <section>
             <div class="row">
@@ -33,23 +33,23 @@
             <br><br><br>
         </section>
     </div>
-    <div class="newsletter text-center">
-        <h1>Where to find us</h1>
-        <br><br>
-        <div class="row">
-            <div class="col-lg-4 col-lg-offset-2">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1329.21052809778!2d-9.147328226097398!3d38.707363087570265!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xd75591a50a686dc4!2sBeta-i!5e1!3m2!1sen!2spt!4v1402918277546" width="400" height="300" frameborder="0" style="border:0"></iframe>
-            </div>
-            <div class="col-lg-3">
-                <br><br><br>
-                <!--p><a href="http://startuplisboa.com/"><i class="fa fa-home"></i></a></p-->
-                <!--span class="hover-text font-light ">Startup Lisboa<br>Rua da Prata 80</span></a-->
-                <p><a href="http://www.lisbon-challenge.com/"><i class="fa fa-home contact-share-icons"></i></a></p>
-                <h3>Lisbon Challenge - Beta-i<br>Pra&ccedil;a Dom Luis I, 30</h3>
-            </div>
-        </div>
-        <br>
-    </div>
+    <!-- <div class="newsletter text-center"> -->
+    <!--     <h1>Where to find us</h1> -->
+    <!--     <br><br> -->
+    <!--     <div class="row"> -->
+    <!--         <div class="col-lg-4 col-lg-offset-2"> -->
+    <!--             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1329.21052809778!2d-9.147328226097398!3d38.707363087570265!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xd75591a50a686dc4!2sBeta-i!5e1!3m2!1sen!2spt!4v1402918277546" width="400" height="300" frameborder="0" style="border:0"></iframe> -->
+    <!--         </div> -->
+    <!--         <div class="col-lg-3"> -->
+    <!--             <br><br><br> -->
+    <!--             <\!--p><a href="http://startuplisboa.com/"><i class="fa fa-home"></i></a></p-\-> -->
+    <!--             <\!--span class="hover-text font-light ">Startup Lisboa<br>Rua da Prata 80</span></a-\-> -->
+    <!--             <p><a href="http://www.lisbon-challenge.com/"><i class="fa fa-home contact-share-icons"></i></a></p> -->
+    <!--             <h3>Lisbon Challenge - Beta-i<br>Pra&ccedil;a Dom Luis I, 30</h3> -->
+    <!--         </div> -->
+    <!--     </div> -->
+    <!--     <br> -->
+    <!-- </div> -->
 
     @views.html.footer.render()
     @views.html.scripts.render()
