--- a/app/views/form.scala.html
+++ b/app/views/form.scala.html
@@ -4,7 +4,7 @@
         <form accept-charset="UTF-8" role="form">
             <fieldset>
                 <div class="row">
-                    <div class="col-lg-6 col-md-4">
+                    <div class="col-lg-3 col-md-offset-3">
                       <input type="email"
                       id="@inputId"
                       class="form-control email"
@@ -14,18 +14,16 @@
                       >
                     </div>
                     <div class="hidden-lg col-md-4"><br /></div>
-                    <div class="col-lg-6 col-md-4">
+                    <div class="col-lg-2">
                       <input type="submit"
                       id="@buttonId"
                       class="btn btn-lg btn-success call-to-action"
                       type="submit"
-                      value="Request Invite"
+                      value="Schedule Demo"
                       >
                     </div>
                 </div>
                 @if(divId != "contact"){
-                  <br><br><br>
-                  <br><br><br>
                 }
             </fieldset>
         </form>
