--- a/app/views/head.scala.html
+++ b/app/views/head.scala.html
@@ -9,9 +9,9 @@
     <meta name="keywords" content="in app purchases, mobile monetization, mobile analytics, real-time, software as a service">
 
     <!-- facebook og -->
-    <meta property="og:title" content="Wazza - In-app purchase analytics">
-    <meta property="og:site_name" content="Wazza - In-app purchase analytics">
-    <meta property="og:description" content="Real-time In-App Purchase Analytics for Small and Medium Companies">
+    <meta property="og:title" content="Wazza - In-app payments analytics">
+    <meta property="og:site_name" content="Wazza - In-app payments analytics">
+    <meta property="og:description" content="Real-time In-App Payments Analytics for Small and Medium Companies">
     <meta property="og:url" content="https://wazza.io/">
     <meta property="og:type" content="website">
     <meta property="og:image" content="@routes.Assets.at("images/wazza_icon_black-01.png")">
@@ -29,6 +29,7 @@
     <!-- CSS -->
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="@routes.Assets.at("stylesheets/jquery.share.css")">
+    <link rel="stylesheet" href="@routes.Assets.at("stylesheets/animate.min.css")">
     <!--link rel="stylesheet" href="@routes.Assets.at("stylesheets/owl/owl.carousel.css")" />
     <link rel="stylesheet" href="@routes.Assets.at("stylesheets/owl/owl.theme.css")" /-->
     <link rel="stylesheet" href="@routes.Assets.at("stylesheets/flexslider.css")"/>
