--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -37,7 +37,7 @@
             <div class="col-lg-12 col-sm-12 col-xs-12">
               <div class="top-message">
                 <h1>In-app payments analytics</h1>
-                <h3>Four lines of code and you're done. Yes, it's that simple!</h3>
+                <h3>Learn why and how your app is making money</h3>
               </div> <!-- top messages -->
             </div> <!-- col -->
             <div class="col-lg-12" style="margin-top: 2em;">
@@ -129,7 +129,7 @@
                     <!-- <img alt="InAppPurchaseAnalytics" src='@routes.Assets.at("images/analytics3.png")'> -->
                     <i class="fa fa-desktop fa-5x"></i>
                     <h3>One dashboard to rule them all</h3>
-                    <h4>Have a complete overview of your in-app purchases performance across all your apps</h4>
+                    <h4>Have a complete overview of your in-app payments performance across all your apps</h4>
                   </div>
                   <div class="col-xs-12 col-sm-4">
                     <i class="fa fa-area-chart fa-5x"></i>
@@ -141,7 +141,7 @@
                     <!-- <img alt="TargetedCampaignsPromotions" src='@routes.Assets.at("images/inventory3.png")'> -->
                     <i class="fa fa-clock-o fa-5x"></i>
                     <h3>Simple and fast integration</h3>
-                    <h4>Integrate our iOS and Android SDKs in minutes with four lines of code. <a href="http://www.wazza.io/how">Check it out!</a></h4>
+                    <h4>Integrate our mobile SDKs in minutes with four lines of code. <a href="http://www.wazza.io/how"><b>Check it out!</b></a></h4>
                   </div>
                 </div>
               </div>
